crates/skribble_preset/src/snapshots/skribble_preset____tests__contained.snap
---
source: crates/skribble_preset/src/__tests.rs
expression: classes.to_skribble_css(runner_config)?
---
/* Generated by Skribble */
@charset "utf-8";
@layer base, default;
@property --sk-cmw {
  syntax: "*";
  inherits: true;
  initial-value: inherit;
}
@layer default {
  .\$contained {
    width: 100%;
    max-width: var(--sk-cmw);
  }
  @media (min-width: 640px) {
    :root {
      --sk-cmw: 640px;
    }
  }
  @media (min-width: 768px) {
    :root {
      --sk-cmw: 768px;
    }
  }
  @media (min-width: 1024px) {
    :root {
      --sk-cmw: 1024px;
    }
    .lg\:\$contained {
      width: 100%;
      max-width: var(--sk-cmw);
    }
  }
  @media (min-width: 1280px) {
    :root {
      --sk-cmw: 1280px;
    }
  }
  @media (min-width: 1536px) {
    :root {
      --sk-cmw: 1536px;
    }
  }
}

