crates/skribble_preset/src/snapshots/skribble_preset____tests__css_from_class_names@aspect-ratio.snap
---
source: crates/skribble_preset/src/__tests.rs
expression: classes.to_skribble_css(runner_config)?
---
/* Generated by Skribble */
@charset "utf-8";
@layer base, alias, default, priority-class;
@layer default {
  .aspect\:\[2\/1\] {
    aspect-ratio: 2/1;
  }
  .aspect\:\$square {
    aspect-ratio: 1;
  }
  .aspect\:\$portrait {
    aspect-ratio: 9 / 16;
  }
}

