crates/skribble_preset/src/snapshots/skribble_preset____tests__css_from_class_names@atom-modifiers.snap
---
source: crates/skribble_preset/src/__tests.rs
expression: classes.to_skribble_css(runner_config)?
---
/* Generated by Skribble */
@charset "utf-8";
@layer base, alias, default, priority-class;
@property --sk-space-x-reverse {
  syntax: "<number>";
  inherits: true;
  initial-value: 0;
}
@property --sk-space-y-reverse {
  syntax: "<number>";
  inherits: true;
  initial-value: 0;
}
@layer default {
  :root {
    --sk-space-x-reverse: 0;
    --sk-space-y-reverse: 0;
  }
  .\$space-x-reverse {
    --sk-space-x-reverse: 1;
  }
  .space-x\:\$px>:not([hidden])~:not([hidden]) {
    margin-right: calc(1px * var(--sk-space-x-reverse, 0));
    margin-left: calc(1px * calc(1 - var(--sk-space-x-reverse, 0)));
  }
  @media (min-width: 768px) {
    .md\:space-y\:\$64>:not([hidden])~:not([hidden]) {
      margin-top: calc(16rem * calc(1 - var(--sk-space-y-reverse, 0)));
      margin-bottom: calc(16rem * var(--sk-space-y-reverse, 0));
    }
  }
}

