crates/skribble_preset/src/snapshots/skribble_preset____tests__css_from_class_names@chained-modifiers.snap
---
source: crates/skribble_preset/src/__tests.rs
expression: classes.to_skribble_css(runner_config)?
---
/* Generated by Skribble */
@charset "utf-8";
@layer base, alias, default;
@property --sk-op-p {
  syntax: "<number>";
  inherits: true;
  initial-value: 1;
}
@property --sk-clr-p {
  syntax: "*";
  inherits: true;
  initial-value: 258.89362 94.37751% 51.17647%;
}
@property --sk-p {
  syntax: "<color>";
  inherits: true;
  initial-value: hsl(258.89362 94.37751% 51.17647%);
}
@layer default {
  :root {
    --sk-op-p: 1;
    --sk-clr-p: 258.89362 94.37751% 51.17647%;
    --sk-p: hsl(var(--sk-clr-p) / var(--sk-op-p));
  }
  [dir=rtl] .rtl\:hover\:required\:bg\:\$primary:hover:required {
    background-color: hsl(var(--sk-clr-p) / var(--sk-op-p));
  }
}

