crates/skribble_preset/src/snapshots/skribble_preset____tests__css_from_class_names@divide.snap
---
source: crates/skribble_preset/src/__tests.rs
expression: classes.to_skribble_css(runner_config)?
---
/* Generated by Skribble */
@charset "utf-8";
@layer base, alias, default, priority-class;
@layer default {
  .divide-x\:\$2 > * + * {
    border-left-width: 2px;
    border-right-width: 0px;
  }
  .divide-y\:\$2 > * + * {
    border-top-width: 2px;
    border-bottom-width: 0px;
  }
}

