crates/skribble_preset/src/snapshots/skribble_preset____tests__css_from_class_names@font-size.snap
---
source: crates/skribble_preset/src/__tests.rs
expression: classes.to_skribble_css(runner_config)?
---
/* Generated by Skribble */
@charset "utf-8";
@layer base, alias, default;
@layer default {
  .font-size\:\$xs {
    font-size: 0.75rem;
    line-height: 1rem;
  }
  .font-size\:\$8xl {
    font-size: 6rem;
    line-height: 1;
  }
}

