crates/skribble_preset/src/snapshots/skribble_preset____tests__css_from_class_names@important.snap
---
source: crates/skribble_preset/src/__tests.rs
expression: classes.to_skribble_css(runner_config)?
---
/* Generated by Skribble */
@charset "utf-8";
@layer base, alias, default, priority-class;
@layer default {
  .\(important\)\:font-size\:\$xs {
    font-size: 0.75rem !important;
    line-height: 1rem !important;
  }
  .\(important\)\:font-size\:\$8xl {
    font-size: 6rem !important;
    line-height: 1 !important;
  }
}

